--- a/package.json
+++ b/package.json
@@ -3,31 +3,40 @@
   "version": "1.0.0",
   "devDependencies": {
     "electron-context-menu": "^0.10.0",
-    "nodemon": "^1.17.3",
+    "nodemon": "^2.0.16",
     "webpack": "^4.12.2"
   },
   "dependencies": {
-    "async": "^2.6.0",
-    "base-64": "^0.1.0",
-    "bootstrap": "^3.3.7",
-    "crypto-js": "^3.1.9-1",
-    "dropbox": "^4.0.16",
-    "electromon": "^1.0.10",
-    "electron": "4.0.0",
-    "electron-is-accelerator": "^0.1.2",
+    "@electron/remote": "^2.0.8",
+    "@grpc/grpc-js": "^1.6.7",
+    "@toast-ui/editor": "^3.1.7",
+    "@toast-ui/editor-plugin-chart": "^3.0.1",
+    "@toast-ui/editor-plugin-code-syntax-highlight": "^3.0.0",
+    "@toast-ui/editor-plugin-color-syntax": "^3.0.3",
+    "@toast-ui/editor-plugin-dooray-auto-complete": "^0.0.2",
+    "@toast-ui/editor-plugin-dooray-parser": "^0.0.3",
+    "@toast-ui/editor-plugin-table-merged-cell": "^3.0.2",
+    "@toast-ui/editor-plugin-uml": "^3.0.1",
+    "@types/prismjs": "^1.26.0",
+    "async": "^3.2.4",
+    "base-64": "^1.0.0",
+    "bootstrap": "^5.1.3",
+    "crypto-js": "^4.1.1",
+    "dropbox": "^10.31.0",
+    "electromon": "^1.0.0",
+    "electron": "19.0.4",
+    "electron-is-accelerator": "^0.2.0",
     "electron-screencapture": "^1.1.0",
-    "github-api": "^3.0.0",
-    "grpc": "^1.18.0",
-    "hotkeys-js": "^3.6.11",
-    "jquery": "^3.3.1",
-    "local-storage": "^1.4.2",
-    "pbkdf2": "^3.0.14",
-    "plantuml-encoder": "^1.2.5",
-    "randombytes": "^2.0.6",
-    "screenshot-desktop": "^1.8.0",
-    "temp": "^0.9.0",
-    "tesseract.js": "^1.0.19",
-    "tui-editor": "^1.2.3"
+    "github-api": "^3.4.0",
+    "hotkeys-js": "^3.9.4",
+    "jquery": "^3.6.0",
+    "local-storage": "^2.0.0",
+    "pbkdf2": "^3.1.2",
+    "plantuml-encoder": "^1.4.0",
+    "randombytes": "^2.1.0",
+    "screenshot-desktop": "^1.12.7",
+    "temp": "^0.9.4",
+    "tesseract.js": "^2.1.5"
   },
   "main": "main.js",
   "scripts": {
